# camcam

./: Cargo.toml  Cross.toml  README.md  build.rs
linux_media/: Cargo.toml  build.rs  wrapper.h
linux_media/src/: lib.rs
src/: camcam.glade  camcam.gresource  camcam.xml  camera.rs  main.rs  picture.rs  sensor_proxy.rs
src/camera/: convert.rs  media_device.rs  media_ioctl.rs  subdevice.rs  topology.rs  video_device.rs
v4l-subdev/: Cargo.toml  build.rs  wrapper.h
v4l-subdev/src/: lib.rs
